Fix nav alignment and font

--- a/css/style.css
+++ b/css/style.css
@@ -34,38 +34,40 @@ header nav{
   width: 100%;
   display: flex;
   justify-content: space-between;
-  padding: 1rem 2rem;
+  align-items: center;
+  padding: 1.5rem 2rem;
 }
 
 
 header nav ul{
   display: flex;
-  align-content: center;
   gap: 2rem;
   list-style-type: none;
 }
 
-header nav ul li{
+header nav ul li, .btn{
   font-family: Arial, Helvetica, sans-serif;
   text-transform: uppercase;
-  font-size: 0.8rem;
+  display: flex;
+  align-items: center;
 }
 
-header nav ul li a{
+header nav ul li a, header .btn{
   color: #3d3d4e;
   font-size: 1rem;
   font-weight: bold;
   text-decoration: none;
 }
+
+header nav ul li a:hover, header .btn:hover{
+  color: #CA2077;
+}
+
 header i{
   font-size: 1.7rem;
 }
 
-header nav ul li a:hover{
-  color: #3d3d4e;
-  }
 
-  
 main{
   width: 100%;
   height: 130vh;
